Add pico_set_security_ram_split for simple split configuration

--- a/src/rp2_common/pico_secure/CMakeLists.txt
+++ b/src/rp2_common/pico_secure/CMakeLists.txt
@@ -65,4 +65,49 @@ if (NOT TARGET pico_secure)
             target_compile_definitions(${NONSECURE_TARGET} PRIVATE PICO_DEFAULT_TIMER=${OPTS_NONSECURE_TIMER})
         endif()
     endfunction()
+
+    # pico_set_security_ram_split(SECURE_TARGET NONSECURE_TARGET <OPTIONS>...)
+    # \brief_nodesc\ Set ram split for a secure and non-secure target
+    #
+    # Set ram split for a secure and non-secure target, so they don't use the same memory.
+    #
+    # Each split option requires arguments to specify the memory sizes
+    #
+    # The split options are:
+    # - SIMPLE <SECURE_LENGTH> <SECURE_SCRATCH_LENGTH>: Secure using start of main SRAM, NonSecure using end of main SRAM and scratch
+    #
+    # \param\ SECURE_TARGET The secure target
+    # \param\ NONSECURE_TARGET The non-secure target
+    # \param\ OPTIONS The options to set
+    function(pico_set_security_ram_split SECURE_TARGET NONSECURE_TARGET)
+        set(multiValueArgs SIMPLE)
+        cmake_parse_arguments(PARSE_ARGV 2 OPTS "" "" "${multiValueArgs}")
+
+        foreach(arg IN LISTS multiValueArgs)
+            if (OPTS_${arg})
+            endif()
+        endforeach()
+
+        if (OPTS_SIMPLE)
+            message("OPTS_SIMPLE ${OPTS_SIMPLE}")
+            list(GET OPTS_SIMPLE 0 SECURE_LENGTH)
+            list(GET OPTS_SIMPLE 1 SECURE_SCRATCH_LENGTH)
+
+            message("SECURE_LENGTH ${SECURE_LENGTH} SECURE_SCRATCH_LENGTH ${SECURE_SCRATCH_LENGTH}")
+
+            pico_set_linker_script_var(${SECURE_TARGET} RAM_LENGTH "${SECURE_LENGTH}-(${SECURE_SCRATCH_LENGTH}*2)")
+            pico_set_linker_script_var(${SECURE_TARGET} SCRATCH_X_ORIGIN "RAM_ORIGIN+RAM_LENGTH")
+            pico_set_linker_script_var(${SECURE_TARGET} SCRATCH_X_LENGTH ${SECURE_SCRATCH_LENGTH})
+            pico_set_linker_script_var(${SECURE_TARGET} SCRATCH_Y_ORIGIN "SCRATCH_X_ORIGIN+SCRATCH_X_LENGTH")
+            pico_set_linker_script_var(${SECURE_TARGET} SCRATCH_Y_LENGTH SCRATCH_X_LENGTH)
+
+            pico_set_linker_script_var(${NONSECURE_TARGET} RAM_ORIGIN "RAM_ORIGIN_DEFAULT+${SECURE_LENGTH}")
+            pico_set_linker_script_var(${NONSECURE_TARGET} RAM_LENGTH "RAM_LENGTH_DEFAULT-${SECURE_LENGTH}")
+
+            target_compile_definitions(${SECURE_TARGET} PRIVATE PICO_SECURITY_SPLIT_SIMPLE=1 PICO_SECURITY_SPLIT_SIMPLE_SECURE_LENGTH=${SECURE_LENGTH})
+        endif()
+
+        target_compile_definitions(${SECURE_TARGET} PRIVATE PICO_SECURITY_SPLIT_CONFIGURED=1)
+
+    endfunction()
 endif()
